--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "12.3.2",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.7",
     "typescript": "5.0.2"
   }
 }
