--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "12.3.2",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.2",
     "recoil": "^0.7.7",
     "typescript": "5.0.2"
   }
