--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axios": "^1.3.5",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "next": "12.3.2",
+    "next": "^13.3.0",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.2",
